# squash-digest

./: Cargo.toml
src/: main.rs
