[package]
name = "squash-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
squashfs = "0.1.0"
anyhow = "1.0.57"
data-encoding = "2.3.2"
ring = "0.16.20"
clap = { version = "3.2.6", features = ["derive"] }
